--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,3 +6,6 @@ jobs:
     steps:
       - checkout
       - run: yarn
+      - run: yarn run lint
+      - run: yarn run test-expressions
+      - run: yarn run test-unit
